--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
  <article class="card xp__item">
           <div class="xp__top">
             <div>
-              <h3 class="xp__title">Freelancer - Backend Developer C++ , Reverse Engineering</h3>
+              <h3 class="xp__title">Freelancer - Backend Developer .NET core , Reverse Engineering</h3>
             </div>
-            <span class="pill2">2016 - Present</span>
+            <span class="pill2">2026 - Present</span>
           </div>
         <ul class="xp__list">
         <li>
