--- a/index.html
+++ b/index.html
@@ -240,30 +240,14 @@
             <span class="pill2">2026 - Present</span>
           </div>
         <ul class="xp__list">
-        <li>
-          Built CRUD-based backend systems connected to SQL Server databases.
-        </li>
-        <li>
-          Designed and optimized database schemas, tables, relationships, and stored procedures.
-        </li>
-        <li>
-          Implemented business logic, data validation, and error handling in backend services.
-        </li>
-        <li>
-          Integrated backend APIs with front-end interfaces using HTML, CSS, and JavaScript.
-        </li>
-        <li>
-          Used Entity Framework Core for data access and ORM mapping.
-        </li>
-         <li>
-          Tested and debugged APIs using Postman and Swagger.
-        </li>
-         <li>
-          Tested and debugged APIs using Postman and Swagger.
-        </li>
-         <li>
-          Applied basic Docker concepts for containerized application environments.
-        </li>
+            <li>Built and maintained REST APIs with ASP.NET Core for multiple freelance clients.</li>
+            <li>Designed and optimized SQL Server queries and procedures for reliable production use.</li>
+            <li>Delivered modular backend code with clean architecture patterns and versioned releases.</li>
+            <li>Designed and optimized database schemas, tables, relationships, and stored procedures.</li>
+            <li>Implemented business logic, data validation, and error handling in backend services.</li>
+            <li>Integrated backend APIs with front-end interfaces using HTML, CSS, and JavaScript.</li>
+            <li>Used Entity Framework Core for data access and ORM mapping.</li>
+            <li>Applied basic Docker concepts for containerized application environments.</li>
         </ul>
         </article>
       </div>
