--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
 
       <div class="filters reveal" role="tablist" aria-label="Project filters">
         <button class="filter active" data-filter="all" type="button">All</button>
-        <!--
-        <button class="filter" data-filter="platform" type="button">Platform</button>
-        <button class="filter" data-filter="dashboard" type="button">Dashboard</button>
-        -->
+        <button class="filter" data-filter="Site" type="button">Buying a Car</button>
+        <button class="filter" data-filter="chat system" type="button">Chat System</button>
+        <button class="filter" data-filter="Maze Solver" type="button">Maze Solver</button>
+        
       </div>
 
       <div class="projects reveal" id="projectsGrid" aria-live="polite"></div>
