--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
         <p class="lead reveal">
           I build clean, scalable <strong>.NET</strong> backend APIs with performance-focused <strong>SQL Server</strong>,
-          and modern tooling like <strong>Docker</strong> and <strong>Git</strong>.
+          and modern tooling like <strong>Docker</strong> and <strong>GitHub</strong>.
         </p>
 
         <div class="cta reveal">
